added a session status bar

--- a/src/webview/style.css
+++ b/src/webview/style.css
@@ -6,6 +6,35 @@
 
 pre {
 	font-family: var(--vscode-editor-font-family);
+	margin: 6px;
+}
+
+code {
+	font-family: var(--vscode-editor-font-family);
+}
+
+.problem-description pre {
+	border: 1px solid #333;
+	border-radius: 9px;
+	margin: 12px;
+	padding: 12px;
+}
+
+.center-loading {
+	width: 50%;
+}
+
+.loading-box {
+	position: absolute;
+    top: 50%;
+    left: 50%;
+    width: auto;
+    height: auto;
+    transform: translate(-50%);
+}
+
+.loading-box-center {
+	width: auto;
 }
 
 .problem-body {
@@ -22,7 +51,8 @@ pre {
 
 .samples-cell {
 	border: 1px solid #333;
-    border-radius: 9px;
+	border-radius: 9px;
+	margin: 4px;
 }
 
 .samples-cell.head {
@@ -41,7 +71,6 @@ pre {
 	/* direct copy from bootstrap lmao */
 	display: inline;
 	padding: 3px 15px 3px;
-	font-size: 125%;
 	font-weight: 700;
 	line-height: 1;
 	color: #000 !important;
